RESOLVED FIXED121782
[GTK] Fix compilation problems when setting ENABLE_DRAG_SUPPORT = FALSE
https://bugs.webkit.org/show_bug.cgi?id=121782
Summary [GTK] Fix compilation problems when setting ENABLE_DRAG_SUPPORT = FALSE
Lorenzo Tilve
Reported 2013-09-23 01:52:56 PDT
On some platforms it might be necessary to compile WebKit disabling dragging functionality (like low-resolution touch screens). I have created a patch that adds a new compilation parameter --enable-drag-support (defaulted to "yes"), which allows adjusting this behaviour.
Attachments
Patch (13.73 KB, patch)
2013-09-23 03:23 PDT, Lorenzo Tilve
no flags
Patch (9.50 KB, patch)
2013-09-24 01:21 PDT, Lorenzo Tilve
no flags
Patch (9.56 KB, patch)
2013-09-24 01:46 PDT, Lorenzo Tilve
no flags
Lorenzo Tilve
Comment 1 2013-09-23 03:23:15 PDT
WebKit Commit Bot
Comment 2 2013-09-23 03:24:43 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Gustavo Noronha (kov)
Comment 3 2013-09-23 06:01:32 PDT
Comment on attachment 212338 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=212338&action=review r- because you're touching mac-related stuff > Source/WebCore/WebCore.exp.in:1856 > +#if ENABLE(DRAG_SUPPORT) > __ZN7WebCore12EventHandler12mouseDraggedEP7NSEvent > +#endif I am not sure this is correct, in any case, I don't think you should change Mac's symbols export file in a gtk-specific change =)
Martin Robinson
Comment 4 2013-09-23 07:31:52 PDT
Wouldn't it make sense for the client to handle this? It could do that by intercepting drag signals and not sending them to the widget.
Lorenzo Tilve
Comment 5 2013-09-24 01:21:38 PDT
Created attachment 212438 [details] Patch Fix the compilation problems when hardcoding on the Profile.h +define ENABLE_DRAG_SUPPORT 0 on the GTK build, but without adding an extra configuration option. Removed the changes on Mac's symbols export file.
WebKit Commit Bot
Comment 6 2013-09-24 01:24:05 PDT
Attachment 212438 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/page/gtk/EventHandlerGtk.cpp', u'Source/WebCore/platform/gtk/PasteboardGtk.cpp', u'Source/WebKit/gtk/ChangeLog', u'Source/WebKit/gtk/WebCoreSupport/DragClientGtk.cpp', u'Source/WebKit/gtk/WebCoreSupport/DragClientGtk.h', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/UIProcess/API/gtk/WebKitWebViewBase.cpp', u'Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebDragClientGtk.cpp']" exit_code: 1 Source/WebKit2/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Lorenzo Tilve
Comment 7 2013-09-24 01:46:55 PDT
WebKit Commit Bot
Comment 8 2013-09-24 11:57:03 PDT
Comment on attachment 212440 [details] Patch Clearing flags on attachment: 212440 Committed r156345: <http://trac.webkit.org/changeset/156345>
WebKit Commit Bot
Comment 9 2013-09-24 11:57:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.